# test_suites

./: BUILD.bazel  README.md  defs.bzl  runner.cc  runner.h
byond_projects/bencht/: bencht.dme  main.dm
byond_projects/coretype_subclass/: coretype_subclass.dm  coretype_subclass.dme
byond_projects/helloworld/: main.dm  main.dme
byond_projects/newobj/: newobj.dm
byond_projects/newvar/: main.dm
byond_projects/parentcalls/: output.binarypb  parentcalls.dm  parentcalls.dmb  parentcalls.dme  parentcalls.int
byond_projects/primitive_manips/: primitive_manips.dm  primitive_manips.dme
byond_projects/sleep_interleaves/: sleep_interleaves.dm  sleep_interleaves.dme
